--- a/main.html
+++ b/main.html
@@ -8,15 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1><b>Spaghetti Recipe</b></h1>
-	<b><h2>Ingredients</h2></b>
+	<h1>Spaghetti Recipe</h1>
+	<h2>Ingredients</h2>
 		<ul>
 			<li>Spaghetti</li>
 			<li> Marinara Sauce</li>
 			<li>Salt</li>
 			<li>Water</li>
 		</ul>
-	<b><h2>Instructions</b>
+	<h2>Instructions</h2>
 	<ol>
 		<li>Bring water to a boil</li>
 		<li>Add spaghetti to boiling water.
