--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		</ul>
 	<h2>Instructions</h2>
 	<ol>
-		<li>Bring water to a boil</li>
+		<li>Bring water to a boil.</li>
 		<li>Add spaghetti to boiling water.
 		<ol>
 			<li>Add salt to taste.</li>
